--- a/frontend/template/^([^_/indexd41d.html
+++ b/frontend/template/^([^_/indexd41d.html
@@ -2,9 +2,12 @@
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
 <!-- Mirrored from www.ridesharingscript.com/ridesharing/^([^:/? by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 31 Jan 2018 10:07:27 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=iso-8859-1" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=iso-8859-1"/><!-- /Added by HTTrack -->
 <HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=../Page-Not-Found.html"><TITLE>Page has moved</TITLE>
+    <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8">
+    <META HTTP-EQUIV="Refresh" CONTENT="0; URL=../Page-Not-Found.html">
+    <TITLE>Page has moved</TITLE>
 </HEAD>
 <BODY>
 <A HREF="../Page-Not-Found.html"><h3>Click here...</h3></A>
