--- a/frontend/template/public_html/stylesheets/Theme36/EN/style.css
+++ b/frontend/template/public_html/stylesheets/Theme36/EN/style.css
@@ -1,4 +1,15 @@
-.ride-f .ride-finner a {padding: 0 13px;}
-.ride-f li a{ margin:3px 0 0;}
-.ride-f li img{ display:none;}
-.ride-f .ride-finner{ margin-left:0px;}
+.ride-f .ride-finner a {
+    padding: 0 13px;
+}
+
+.ride-f li a {
+    margin: 3px 0 0;
+}
+
+.ride-f li img {
+    display: none;
+}
+
+.ride-f .ride-finner {
+    margin-left: 0px;
+}
